[package]
name = "line-history"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["calendar"]
calendar = ["text-calendar"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.26"
rand = "0.8.5"
regex = "1.9.4"
text-calendar = { git = "https://github.com/TyomoGit/text-calendar.git", version = "0.3.1", optional = true }
